Fixing overflow issue

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body, section {
     overflow-wrap: break-word;
     /* margin: 0 150px; */
     margin: 0 10%;
+    overflow-x: hidden;
 }
 
 .page {
